feat(pg) : Sonar issue